<resources>
    <string name="app_name">Cowpay Sample</string>
    <string name="start_payment">Start Payment</string>
    <string name="pay_with_credit_card">Pay With Credit Card</string>
    <string name="pay_with_fawry">Pay With Fawry</string>
    <string name="save_credit_card">Save Credit Card</string>
    <string name="open_payment_list">Open Payment List</string>

    <string name="choose_environment">Choose Environment</string>
    <string name="production">Production</string>
    <string name="sandbox">SandBox</string>
</resources>
