<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
    >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:padding="10dp"
                android:text="@string/choose_environment" />

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

            <RadioButton
                    android:id="@+id/rbSandboxMainActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/sandbox" />

            <RadioButton
                    android:id="@+id/rbProductionMainActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/production" />

        </RadioGroup>

        <Button
                android:id="@+id/btnPayWithCreditCardMainActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_with_credit_card"
                android:layout_marginTop="100dp"
                android:padding="10dp"
        />

        <Button
                android:id="@+id/btnPayWithFawryMainActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_with_fawry"
                android:layout_marginTop="20dp"
                android:padding="10dp"
        />

        <Button
                android:id="@+id/btnSaveCreditCardMainActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_credit_card"
                android:layout_marginTop="20dp"
                android:padding="10dp"
        />
        <Button
                android:id="@+id/btnOpenPaymentListMainActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_payment_list"
                android:layout_marginTop="20dp"
                android:padding="10dp"
        />

    </LinearLayout>
</layout>